Add demo/dist to repo. More demo development.

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,3 +1,99 @@
-.title {
+.textGreen1     { color: #96CA2D }
+.textGreen2     { color: #B5E655 }
+.textOffwhite   { color: #EDF7F2 }
+.textBlue1      { color: #4BB5C1 }
+.textBlue2      { color: #7FC6BC }
+
+.bgGreen1       { background-color: #96CA2D }
+.bgGreen2       { background-color: #B5E655 }
+.bgOffwhite     { background-color: #EDF7F2 }
+.bgBlue1        { background-color: #4BB5C1 }
+.bgBlue2        { background-color: #7FC6BC }
+
+
+.header {
+  composes: bgBlue1
+}
+
+.mainHeading {
+  composes: textOffwhite;
+  font-size: 75px;
   font-family: sans-serif;
+  text-align: center;
+  line-height: 15rem;
+}
+
+.headerBorder {
+  composes: bgGreen1;
+  position: relative;
+  height: 12px;
+}
+
+.content {
+  composes: bgGreen2;
+  position: relative;
+  min-height: 600px;
+}
+
+
+
+
+
+
+
+
+
+/* CSS resets and general tweaks */
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
